--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
 	overflow: hidden;
 	margin: 40px 0 0 30px;
 	padding: 20px;
+	width: 440px;
 	z-index: 2;
 	color: rgb(0, 0, 0);
 	font-size: 16px;
