--- a/css3_11.css
+++ b/css3_11.css
@@ -12,19 +12,19 @@ body {
 	font-family: "goudy-bookletter-1911-1", "goudy-bookletter-1911-2", "Baskerville", "Georgia", serif;
 	border-style: solid;
 	border-width: 1px;
-	border-color: rgba(21,11,11, 0.2);
+	border-color: rgba(21, 11, 11, 0.2);
 	overflow: hidden;
 	margin: 40px 0 0 30px;
 	padding: 20px;
-	width: 440px;
 	z-index: 2;
 	color: rgba(0, 0, 0, 0.6);
 	font-size: 16px;
+	width: 440px;
 	border-radius: 15px;
-	box-shadow: 0px 0px 20px white;
+	box-shadow: 0px 0px 10px white;
 	background: linear-gradient(to bottom, #444444, #999999);
 	animation-name: animacion;
-	animation-duration: 5s:;
+	animation-duration: 5s;
 }
 header {
 	margin: 0 0 20px 0;
@@ -35,7 +35,7 @@ abbr {cursor: help;
 	font-size: 130%;
 	color: #ff2166;
 	border-bottom: 1px dotted #888;
-	text-shadow: 1px 1px #333;
+	text-shadow: 0px 0px 1px #333;
 }
 p {
 	font-size: 30px;
@@ -43,3 +43,5 @@ p {
 	margin: 0 0 0 0;
 	width: auto;
 }
+
+
